# surety

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  rustfmt-nightly.toml
src/: checked.rs  lib.rs  overflowing.rs  saturating.rs  wrapping.rs
